--- a/assets/scss/blog/freshpet-product-applications.scss
+++ b/assets/scss/blog/freshpet-product-applications.scss
@@ -60,7 +60,7 @@
 }
 
 @media (max-width: 576px) {
-    // .context-img { max-height: 320px; height: auto; }
+    .context-img { max-height: 320px; height: auto; }
   }
 
 .meta-text{
