--- a/assets/scss/partials/blog/portfolio-content.scss
+++ b/assets/scss/partials/blog/portfolio-content.scss
@@ -1,11 +1,16 @@
 .portfolio-card-img{
-    max-width: 580px;
-    max-height: 375px;
+    height: 300px;
     border-radius: 8px;
     transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
     box-shadow: 0px 5px 3px 0px rgba(71, 61, 51, 0.0);
     border: 1px solid rgba(72,124,137,.5);
     width: 100%;
+}
+@include media-breakpoint-up(lg) {
+    .portfolio-card-img{
+        max-width: 580px;
+        max-height: 375px;
+    }
 }
 
 .portfolio-card-title{
